--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Random Dog Generator</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Random Dog Picture</h1>
+    <!-- Button to trigger random dog picture generation -->
+    <button onclick="fetchRandomDog()">Generate Dog Picture</button>
+    <br><br>
+    <!-- Container to display the dog image -->
+    <img id="dogImage" src="" alt="Random Dog" style="max-width: 500px; max-height: 500px;">
+
+    <script>
+        function fetchRandomDog() {
+            // Fetch random dog image from the Dog CEO API
+            fetch('https://dog.ceo/api/breeds/image/random')
+                .then(response => response.json())
+                .then(data => {
+                    // Get the image URL from the API response
+                    const dogImageUrl = data.message;
+                    // Set the image source to the new dog image URL
+                    document.getElementById('dogImage').src = dogImageUrl;
+                })
+                .catch(error => console.error('Error fetching dog image:', error));
+        }
+    </script>
 </body>
 </html>
