--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Stock Tips on Social Media</title>
+    <title>Stocks and Dogs</title>
 </head>
 <body>
     <h1>Top 10 Most Active Stock Tips on Social Media</h1>
